--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/buttons_layout"
-        android:layout_width="312dp"
-        android:layout_height="451dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginTop="156dp"
+        android:layout_width="357dp"
+        android:layout_height="450dp"
+        android:layout_marginTop="150dp"
         android:background="@drawable/left_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -33,7 +32,7 @@
             android:id="@+id/announcement_text"
             android:layout_width="123dp"
             android:layout_height="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="28dp"
             android:text=""
             android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,12 +44,11 @@
             android:id="@+id/daily_specials_button"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="80dp"
             android:background="@color/colorLight"
             android:text="@string/specials_button_string"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/announcement_text" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/food_menu_button"
@@ -78,23 +76,22 @@
             android:id="@+id/directions_button"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="300dp"
             android:background="@color/colorLight"
             android:text="@string/directions_button_string"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/beer_menu_button" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/contact_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="13dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="32dp"
             android:text="@string/contact_line"
             android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.477"
+            app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/directions_button" />
 
