--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -66,11 +66,11 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_marginEnd="0dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="230dp"
             android:background="@color/colorLight"
             android:text="@string/beer_menu_button_string"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/food_menu_button" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/directions_button"
