--- a/App/app/src/main/res/layout/get_directions.xml
+++ b/App/app/src/main/res/layout/get_directions.xml
@@ -18,7 +18,7 @@
         <Button
             android:id="@+id/directions_to_home"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="300dp"
             android:background="@color/colorLight"
