--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -55,18 +55,18 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_marginEnd="0dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="160dp"
             android:background="@color/colorLight"
             android:text="@string/menu_button_string"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/daily_specials_button" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/beer_menu_button"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_marginEnd="0dp"
-            android:layout_marginTop="230dp"
+            android:layout_marginTop="240dp"
             android:background="@color/colorLight"
             android:text="@string/beer_menu_button_string"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
             android:id="@+id/directions_button"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            android:layout_marginTop="300dp"
+            android:layout_marginTop="320dp"
             android:background="@color/colorLight"
             android:text="@string/directions_button_string"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="13dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:text="@string/contact_line"
             android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
