--- a/App/app/src/main/res/layout/menu_item_view.xml
+++ b/App/app/src/main/res/layout/menu_item_view.xml
@@ -21,7 +21,7 @@
         android:layout_width="192dp"
         android:layout_height="82dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_item_text_view" />
@@ -30,9 +30,9 @@
         android:id="@+id/menu_price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="148dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/menu_description_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/menu_item_text_view" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
