--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -30,13 +30,13 @@
 
         <TextView
             android:id="@+id/announcement_text"
-            android:layout_width="123dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="28dp"
-            android:text=""
+            android:layout_width="297dp"
+            android:layout_height="53dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/announcemnt_string"
             android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintHorizontal_bias="0.733"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
